# SecKit

./: CMakeLists.txt  framework.h  main.cpp
cmake/: FindCryptlib.cmake  FindLibprotobuf.cmake
core/Encryption/: EncryptorTest.cpp
core/Entry/: Entry.cpp  Entry.h
core/encryption/: Encryptor.cpp  Encryptor.h  EncryptorTest.cpp
core/mainService/: MainService.cpp  MainService.h  MainServiceTest.cpp  RecordSupplier.cpp  RecordSupplier.h  RecordSupplierTest.cpp
core/record/: AddressRecord.cpp  AddressRecord.h  PasswordRecord.cpp  PasswordRecord.h  Record.cpp  Record.h
core/serialization/: Serializer.cpp  Serializer.h  SerializerTest.cpp  address.proto  password.proto
winapi/: MainWindowController.cpp  MainWindowController.h  styles.h
